[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/kennySprites/enemies/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/kennySprites/enemies/slimeBlue_squashed.png" type="Texture" id=2]
[ext_resource path="res://Assets/kennySprites/enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]
[ext_resource path="res://Assets/sounds/pepSound2.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/sounds/error_007.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.7835
height = 25.568

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.61932, 24.7973 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.0955, 9.71387 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23.7064, 1.30303 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2147483664
collision_mask = 2147483683
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.743256, 4.11004 )
rotation = -1.57079
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2147483650

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0.297302, -12.9326 )
rotation = -1.57079
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0.594597, 5.20265 )
shape = SubResource( 4 )

[node name="bottom_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_checker"]
position = Vector2( 0.66893, 16.2256 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundSquashed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 18.0
pitch_scale = 2.0

[node name="SoundHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="body_entered" from="bottom_checker" to="." method="_on_bottom_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
